infra/appset/default/pict/templates/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pictrs
  labels:
    app: pictrs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pictrs
  template:
    metadata:
      labels:
        app: pictrs
    spec:
      containers:
      - name: pictrs
        image: asonix/pictrs:0.5
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: pictrs-storage
          mountPath: /mnt
      volumes:
      - name: pictrs-storage
        persistentVolumeClaim:
          claimName: pictrs-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: pictrs
spec:
  selector:
    app: pictrs
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
