infra/appset/default/pict/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pictrs-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: pict.cdxker.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pictrs
            port:
              number: 8080
